--- a/U-NET_segmentation_tumeur/detection-tumeurs-irm.ipynb
+++ b/U-NET_segmentation_tumeur/detection-tumeurs-irm.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "source": [
     "# Segmentation d'une tumeur cérébrale en IRM\n",
+    "\n",
+    "La segmentation de tumeurs est le processus de délimitation précise de la tumeur à partir des images médicales. Cela permet aux professionnels de la santé de mieux comprendre la taille, la forme, la localisation et l'extension de la tumeur, ce qui peut aider à la planification du traitement et du suivi.\n",
+    "\n",
     "Le choix de la séquence d'une imagerie par résonance magnétique (IRM) dépend du type de tissu que l'on souhaite visualiser et des informations spécifiques que l'on cherche à obtenir. Voici quelques exemples de séquences d'IRM et leur utilisation :\n",
     "\n",
     "- La séquence pondérée en T1 est utile pour visualiser les tissus mous et les organes. Elle fournit des images de haute résolution avec une bonne différenciation entre les tissus mous, et elle est souvent utilisée pour évaluer la structure du cerveau, du foie, des reins et de la moelle épinière.\n",
@@ -510,8 +513,31 @@
     "tags": []
    },
    "source": [
-    "### Construction d'un modèle UNET\n",
-    "U-Net est un modèle de réseau de neurones convolutifs largement utilisé pour la segmentation d'images médicales, y compris pour la segmentation des tumeurs. La structure en forme de U de U-Net permet de combiner des informations contextuelles globales avec des informations locales précises afin de réaliser des segmentations précises des régions d'intérêt dans les images médicales. En particulier, U-Net est connu pour être performant dans la segmentation de structures anatomiques complexes, telles que les tumeurs, dans les images médicales en 3D."
+    "### Construction d'un modèle U-NET\n",
+    "#### U-NET ?\n",
+    "U-Net est un modèle de réseau de neurones convolutifs (CNN) largement utilisé pour la segmentation d'images médicales, y compris pour la segmentation des tumeurs. \n",
+    "\n",
+    "L'architecture U-Net se compose d'un encodeur et d'un décodeur, reliés par un chemin de liaison en forme de U, qui permet de connecter directement les couches de l'encodeur à celles du décodeur, en sautant certaines couches intermédiaires, afin de préserver les informations spatiales de l'image originale qui sont perdues lors de la réduction de la dimensionnalité de l'image par l'encodeur.\n",
+    "\n",
+    "L'encodeur est similaire à celui d'un CNN classique, avec plusieurs couches de convolutions et de pooling pour extraire des caractéristiques à partir de l'image en entrée. Cependant, contrairement à un CNN classique, l'encodeur de U-Net conserve la résolution spatiale de l'image à chaque étape, en utilisant des couches de pooling avec un stride de 2 plutôt que de 2x2.\n",
+    "\n",
+    "Le chemin de liaison entre l'encodeur et le décodeur est constitué de connexions en saut (skip connection), qui transmettent des informations d'activation de l'encodeur au décodeur. Cela permet au décodeur de reconstruire une segmentation de l'image originale à partir des caractéristiques extraites par l'encodeur.\n",
+    "\n",
+    "Le décodeur est construit en utilisant des couches de convolutions transposées pour remonter progressivement à la résolution de l'image d'origine. Chaque couche de convolution transposée est suivie d'une couche de concaténation, qui combine les caractéristiques de l'encodeur correspondant à la même résolution spatiale.\n",
+    "\n",
+    "En fin de compte, l'architecture U-Net est capable de segmenter des tumeurs dans des images médicales en apprenant à associer chaque pixel de l'image à une classe (tumeur ou non tumeur) en fonction des caractéristiques extraites de l'image par le réseau.\n",
+    "\n",
+    "#### Modèle choisi:\n",
+    "Le modèle U-Net construit est utilisé pour effectuer la segmentation d'images FLAIR à partir des images de segmentation.\n",
+    "L'objectif est d'entraîner le modèle à segmenter des tumeurs cérébrales à partir d'images FLAIR (Fluid-Attenuated Inversion Recovery) et des masques de segmentation associés contenus dans le dataset BRATS2019.\n",
+    "\n",
+    "Le modèle commence par charger les images FLAIR et de segmentation et normaliser les images FLAIR en soustrayant la moyenne et en divisant par l'écart-type et retourne une carte de segmentation binaire qui identifie les régions de tissus cérébraux suivants : la matière blanche, la matière grise, le liquide céphalo-rachidien (CSF), et les zones de nécrose et de tumeurs.\n",
+    "\n",
+    "Ensuite, il construit le modèle U-Net avec une architecture composée de couches de convolutions et de max-pooling jusqu'à une couche de déconvolution finale pour générer la segmentation de l'image. Le modèle utilise la fonction d'activation ReLU et une fonction de perte de \"binary_crossentropy\" pour entraîner le modèle avec l'optimiseur Adam. \n",
+    "\n",
+    "Le modèle U-Net a une architecture encoder-decoder avec des connexions entre les couches du même niveau. Les couches d'encodeur sont utilisées pour extraire les caractéristiques de l'image FLAIR tandis que les couches de décodeur sont utilisées pour reconstituer une carte de segmentation en haute résolution. Le modèle utilise également des couches de max pooling pour réduire la résolution spatiale de l'image, ce qui permet d'augmenter l'efficacité de l'entraînement et de réduire le risque de surapprentissage.\n",
+    "\n",
+    "Le modèle est entraîné avec l'optimiseur Adam et la fonction de perte binaire_crossentropy. Le taux d'apprentissage est fixé à 1e-4, la taille de lot est de 32 et le nombre d'epochs est de 10. Enfin, le modèle entraîné est renvoyé en sortie."
    ]
   },
   {
